--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-  
+  <!-- Erdem was here :) !-->  
   <div class="container">
     
     <div class="row">
