Paho JS Client Library update

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     
   </div>
-  <script src="./assets/js/mqttws31.js" type="text/javascript"></script>
+  <script src="./assets/js/paho-mqtt.js" type="text/javascript"></script>
   <script src="./assets/js/main.js" type="text/javascript"></script>
 </body>
 </html>
